[package]
name = "bulletproof"
version = "0.1.0"
authors = [
    "Omer <omer@kzencorp.com>",
]

[lib]
crate-type = ["lib"]

[dependencies]
curv = { git = "https://github.com/vhnatyk/curv", features =  ["ec_secp256k1"]}
# curv = { version = "0.1.0", features = ["ec_secp256k1"], path = "C:/Projects/Repos/Kzen/curv" }
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false